Fix sonar findings: DistributionSetTagManagementTest
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>